# floating_time

./: README.md  pyproject.toml  requirements.txt  setup.py  tasks.py
src/: main.py
src/floatingtime/: __init__.py  floating_window.py  main.py  time_window.py
